@@ -17,6 +17,8 @@
     obey StartupNotify when opening with desktop app
     scroll to cursor after sort change
     update thumbnail being copied after last write with delay #508 #591
+    fix Paste in dir tree pastes to wrong dir #596
+    menu key in dir tree changes dir and acts on correct dir #596
 1.0.4   2015-10-17:
     new spacefm-installer replaces self-extrct and install #571
     README rewritten and manual updated for new installer #571
